# reqMock

./: .gitignore  README.md  pyproject.toml  setup.cfg
reqMock/: reqMock.py
src/reqMock/: __init__.py  reqMock.py
src/reqMock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: main.py
