[build-system]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setup-cfg-only-projects
requires = [
  "setuptools >= 58",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "reqMock"
authors = [
    {name = "KhanhNguyen9872", email = "khanhvuinguyenvan800983609@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "requests"
]