[metadata]
name = reqMock
version = 0.0.0.1
description = Mock requests in python3
long_description = file: README.md
long_description_content_type = text/markdown
author = KhanhNguyen9872
author_email = khanhvuinguyenvan800983609@gmail.com
# maintainer =
# maintainer_email =
license = BSD-3-Clause
license_file = LICENSE
# license_files = LICENSES/*
url = https://github.com/KhanhNguyen9872/reqMock
download_url = https://github.com/KhanhNguyen9872/reqMock
project_urls =
    Documentation = https://github.com/KhanhNguyen9872/reqMock#readme
    Issue Tracker = https://github.com/KhanhNguyen9872/reqMock/issues
    Source Code = https://github.com/KhanhNguyen9872/reqMock
keywords = reqMock
sclassifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
platforms = any

[options]
python_requires = >=3.6
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
tests =
  pytest
  pytest-cov

code =
  flake8
